<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WeatherDetailFragment"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="date"
                android:textSize="32sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_moonrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moonrise"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_moonset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moonset"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>